Fix header on mobile (#5)

--- a/assets/_scss/base.scss
+++ b/assets/_scss/base.scss
@@ -136,7 +136,7 @@ img {
 }
 
 header {
-  width: 210px !important;
+  // width: 210px !important;
   float: left;
   position: fixed;
   -webkit-font-smoothing: subpixel-antialiased;
